--- a/README
+++ b/README
@@ -2,6 +2,6 @@ porting my shell from lab19 to freeRTOS based on zzz0072's modification.
 
 Thank and respect zzz0072's effort.
 
-There are still many place needed to be fixed, especially for the 'ps' commamd.
+There are still many places needed to be fixed, especially for the 'ps' commamd.
 
 
